Fixing vertical alignment between titles and text

--- a/deploy/public/includes/css/style.css
+++ b/deploy/public/includes/css/style.css
@@ -280,7 +280,7 @@
     text-transform:uppercase;
     width: 480px;
     float:left;
-    margin: 0;
+    margin: 7px 0 0 0;
     letter-spacing: -0.04em;
     line-height: 81px;
     font-weight: normal;
